log
Mon 06 May 2024 02:49:56 PM UTC: 
 tests:  1|8
total_score: 0/70
f662720
Mon 06 May 2024 03:28:25 PM UTC: 
 treemap.c | 20 ++++++++++++++------
 1 file changed, 14 insertions(+), 6 deletions(-)
 tests:  4|7
total_score: 5/70
658020c
Mon 06 May 2024 03:34:58 PM UTC: 
 treemap.c | 28 +++++++++++++++++++++++++++-
 1 file changed, 27 insertions(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
e47a4bb
Mon 06 May 2024 03:46:53 PM UTC: 
 treemap.c | 40 +++++++++++++++++++++++++++++++++++++---
 1 file changed, 37 insertions(+), 3 deletions(-)
 tests:  10|6
total_score: 15/70
5e76f15
Mon 06 May 2024 03:52:06 PM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  10|6
total_score: 15/70
0ee3313
Mon 06 May 2024 03:52:58 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|6
total_score: 15/70
65ed3c9
Mon 06 May 2024 03:53:38 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|6
total_score: 15/70
a23bb04
Mon 06 May 2024 03:54:37 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
802c94a
Mon 06 May 2024 03:55:11 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|6
total_score: 15/70
770f517
Mon 06 May 2024 03:56:25 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|6
total_score: 15/70
478aec6
Mon 06 May 2024 03:56:35 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
9bbfc52
Mon 06 May 2024 04:02:31 PM UTC: 
 treemap.c | 68 +++++++++++++++++++++++++++++----------------------------------
 1 file changed, 31 insertions(+), 37 deletions(-)
In file included from test.c:4:
treemap.c:54:10: error: ‘insertTreeMap’ defined but not used [-Werror=unused-function]
   54 |     void insertTreeMap(TreeMap *tree, void *key, void *value) {
      |          ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
1f2454c
Mon 06 May 2024 04:03:07 PM UTC: 
 treemap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  12|6
total_score: 15/70
3851d53
Wed 08 May 2024 10:51:27 AM UTC: 
 treemap.c | 75 ++++++++++++++++++++++++++++++++++-----------------------------
 1 file changed, 40 insertions(+), 35 deletions(-)
In file included from test.c:4:
test.c: In function ‘insertTreeMap’:
treemap.c:55:12: error: ‘*newNode.pair’ is used uninitialized [-Werror=uninitialized]
   55 |     newNode->pair->key = key;
      |     ~~~~~~~^~~~~~
treemap.c:56:12: error: ‘*newNode.pair’ is used uninitialized [-Werror=uninitialized]
   56 |     newNode->pair->value = value;
      |     ~~~~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
80ba04f
Wed 08 May 2024 10:52:37 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
test.c: In function ‘insertTreeMap’:
treemap.c:55:12: error: ‘*newNode.pair’ is used uninitialized [-Werror=uninitialized]
   55 |     newNode->pair->key = key;
      |     ~~~~~~~^~~~~~
treemap.c:56:12: error: ‘*newNode.pair’ is used uninitialized [-Werror=uninitialized]
   56 |     newNode->pair->value = value;
      |     ~~~~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
8ec6a7d
